[gd_scene load_steps=20 format=3 uid="uid://cdk7e4ke6whje"]

[ext_resource type="Script" path="res://HUD/HUD.gd" id="1_3bba0"]
[ext_resource type="Texture2D" uid="uid://do55dqf6kkafx" path="res://HUD/icons/torch.png" id="1_6wbnk"]
[ext_resource type="Texture2D" uid="uid://dvckkuecokfnm" path="res://HUD/icons/machete.png" id="2_nnckb"]
[ext_resource type="Texture2D" uid="uid://cdnshg6qi133l" path="res://HUD/icons/ropes.png" id="3_pfwhp"]
[ext_resource type="Script" path="res://HUD/dialog/dialog.gd" id="5_fy1mf"]
[ext_resource type="Texture2D" uid="uid://cnkvahk3hgb23" path="res://HUD/faces/elf_neutral.png" id="5_s8hn7"]
[ext_resource type="Texture2D" uid="uid://da0q6c7u5d7d8" path="res://HUD/dialog/dialog_background.png" id="6_f6r1p"]
[ext_resource type="Texture2D" uid="uid://mlxi0gr5sb21" path="res://HUD/icons/dialog_arrow.png" id="7_o01uu"]
[ext_resource type="Script" path="res://HUD/craft.gd" id="9_s3mh2"]
[ext_resource type="Texture2D" uid="uid://sl5erq2tgrg6" path="res://HUD/background.png" id="10_lqt6g"]
[ext_resource type="Script" path="res://HUD/use_tool.gd" id="11_r06m7"]

[sub_resource type="Gradient" id="Gradient_apohb"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vr3sx"]
gradient = SubResource("Gradient_apohb")
height = 320

[sub_resource type="Gradient" id="Gradient_kx1ob"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_s7w7y"]
gradient = SubResource("Gradient_kx1ob")
width = 576

[sub_resource type="LabelSettings" id="LabelSettings_np1p8"]
font_size = 45

[sub_resource type="LabelSettings" id="LabelSettings_a0kxx"]
font_size = 45

[sub_resource type="LabelSettings" id="LabelSettings_qoic5"]
font_size = 45

[sub_resource type="LabelSettings" id="LabelSettings_e7i60"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_3bba0")

[node name="HUD_background_left" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_vr3sx")
centered = false

[node name="HUD_background_bottom" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_s7w7y")
centered = false
offset = Vector2(0, 320)

[node name="Icons" type="Node2D" parent="."]

[node name="Torch" type="Sprite2D" parent="Icons"]
position = Vector2(32, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_6wbnk")
centered = false

[node name="Machete" type="Sprite2D" parent="Icons"]
visible = false
position = Vector2(32, 32)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_nnckb")
centered = false

[node name="Ropes" type="Sprite2D" parent="Icons"]
visible = false
position = Vector2(32, 64)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_pfwhp")
centered = false

[node name="Numbers" type="Node2D" parent="."]

[node name="Torch" type="Label" parent="Numbers"]
custom_minimum_size = Vector2(64, 64)
scale = Vector2(0.5, 0.5)
text = "0"
label_settings = SubResource("LabelSettings_np1p8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Machete" type="Label" parent="Numbers"]
visible = false
custom_minimum_size = Vector2(64, 64)
offset_top = 32.0
offset_bottom = 32.0
scale = Vector2(0.5, 0.5)
text = "0"
label_settings = SubResource("LabelSettings_a0kxx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ropes" type="Label" parent="Numbers"]
visible = false
custom_minimum_size = Vector2(64, 64)
offset_top = 64.0
offset_bottom = 64.0
scale = Vector2(0.5, 0.5)
text = "0"
label_settings = SubResource("LabelSettings_qoic5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Dialog" type="Node2D" parent="."]
visible = false
position = Vector2(0, 320)
script = ExtResource("5_fy1mf")

[node name="Portrait" type="Sprite2D" parent="Dialog"]
texture_filter = 1
texture = ExtResource("5_s8hn7")
centered = false

[node name="DialogBackground" type="Sprite2D" parent="Dialog"]
texture_filter = 1
position = Vector2(64, 0)
texture = ExtResource("6_f6r1p")
centered = false

[node name="Text" type="Label" parent="Dialog"]
texture_filter = 2
custom_minimum_size = Vector2(492, 54)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 69.0
offset_top = 5.0
offset_right = 561.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_e7i60")
autowrap_mode = 2

[node name="TextTimer" type="Timer" parent="Dialog"]
wait_time = 0.1

[node name="TextArrow" type="Sprite2D" parent="Dialog"]
position = Vector2(560, 44)
scale = Vector2(0.063, 0.063)
texture = ExtResource("7_o01uu")
centered = false

[node name="Craft" type="Node2D" parent="."]
visible = false
position = Vector2(320, 160)
script = ExtResource("9_s3mh2")

[node name="Label" type="Label" parent="Craft"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.5
offset_top = -120.0
offset_right = 36.5
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 30
text = "CRAFT"
horizontal_alignment = 1
uppercase = true

[node name="Sprite2D" type="Sprite2D" parent="Craft"]
modulate = Color(1, 1, 1, 0.494118)
texture_filter = 1
texture = ExtResource("10_lqt6g")

[node name="ItemList" type="ItemList" parent="Craft"]
custom_minimum_size = Vector2(310, 150)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
item_count = 1
icon_scale = 0.5
item_0/text = "Torch x 2"
item_0/icon = ExtResource("1_6wbnk")

[node name="Use" type="Node2D" parent="."]
visible = false
position = Vector2(320, 160)
script = ExtResource("11_r06m7")

[node name="Label" type="Label" parent="Use"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.5
offset_top = -128.0
offset_right = 45.5
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 30
text = "CHOOSE"
horizontal_alignment = 1
uppercase = true

[node name="Sprite2D" type="Sprite2D" parent="Use"]
modulate = Color(1, 1, 1, 0.494118)
texture_filter = 1
texture = ExtResource("10_lqt6g")

[node name="ItemList" type="ItemList" parent="Use"]
custom_minimum_size = Vector2(310, 150)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
icon_scale = 0.5

[node name="GameOver" type="Node2D" parent="."]
visible = false

[node name="Label" type="Label" parent="GameOver"]
offset_left = 64.0
offset_right = 576.0
offset_bottom = 220.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.658824, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 30
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Label2" type="Label" parent="GameOver"]
offset_left = 64.0
offset_top = 68.0
offset_right = 576.0
offset_bottom = 220.0
theme_override_colors/font_color = Color(1, 0.682353, 0.631373, 1)
theme_override_colors/font_outline_color = Color(0.952941, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 18
text = "Click or Press Enter to Restart"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="finished_dialog" from="Dialog" to="." method="_on_dialog_finished_dialog"]
[connection signal="timeout" from="Dialog/TextTimer" to="Dialog" method="scroll_text"]
[connection signal="finished_crafting" from="Craft" to="." method="_on_craft_finished_crafting"]
[connection signal="chose" from="Use" to="." method="_on_use_chose"]
